NEW: Intro to History

--- a/Hist/index.html
+++ b/Hist/index.html
@@ -31,7 +31,7 @@
 				<h3>Common Uses</h3>
 				<canvas id="myChart2" width="400" height="400"></canvas>
 			</div>
-			<p>This is content that the chart sould holefully wrap around if it were well designed</p>
+			<p>Looking at drones today, it’s not hard to imagine the changes they’ve gone through since their conception. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
 		
 		<section>
@@ -49,9 +49,6 @@
 		
 		
 		
-		
-		
-		<div style="height:200vh;"></div>
 		
 		<script>
 			var ctx = document.getElementById("myChart").getContext("2d");
