--- a/Prob/index.html
+++ b/Prob/index.html
@@ -15,6 +15,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
+				<li><a href="/Hist">History</a></li>
 				<li><a href="/Use">Uses</a></li>
 				<li><a href="/Tech">Technology</a></li>
 				<li class="CurrPage"><a>Concerns</a></li>
