--- a/Use/index.html
+++ b/Use/index.html
@@ -12,6 +12,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
+				<li><a href="/Hist">History</a></li>
 				<li class="CurrPage"><a>Uses</a></li>
 				<li><a href="/Tech">Technology</a></li>
 				<li><a href="/Prob">Concerns</a></li>
