--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<nav>
 			<ul>
 				<li class="CurrPage"><a>Home</a></li>
+				<li><a href="/Hist">History</a></li>
 				<li><a href="/Use">Uses</a></li>
 				<li><a href="/Tech">Technology</a></li>
 				<li><a href="/Prob">Concerns</a></li>
