--- a/Hist/index.html
+++ b/Hist/index.html
@@ -31,11 +31,7 @@
 				<h3>Common Uses</h3>
 				<canvas id="myChart2" width="400" height="400"></canvas>
 			</div>
-			<p>Looking at drones today, it’s not hard to imagine the changes they’ve gone through since their conception. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
-		</section>
-		
-		<section>
-			<h2>Developments</h2>
+			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying (for more details, see the <a href="/Use/">uses</a> page), it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
 		
 		<section>
@@ -44,6 +40,7 @@
 				<h3>Sales Over Time</h3>
 				<canvas id="myChart" width="400" height="400"></canvas>
 			</div>
+			<p>Reginald Denny sold 15,000 of his drones to the military, who made the drones more efficient at flying and conserving energy. When the public discovered drones en masse, private industries quickly prepared drones for public release. The first drones were small quadcopters that would be controlled using radio waves. Their parts became smaller and more powerful, in particular with the widespread release of the transistor in the ‘60s. As technology improved, parts, such as the onboard computer, were compressed and allowed for a variety of designs, whereas the older technology only allowed for one physically possible and practical drone design.</p>
 		</section>
 		
 		
@@ -216,7 +213,7 @@
 					}
 					
 				},
-				offset: '50%'
+				offset: '70%'
 			});
 		</script>
 	</body>
