--- a/Hist/index.html
+++ b/Hist/index.html
@@ -215,6 +215,52 @@
 				},
 				offset: '70%'
 			});
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			//
+			//IMAGE PRELOADING CRAP
+			//
+			var images = new Array()
+			console.log("WARNING About to dump massive stuff to console");
+
+			for(i = 0; i <= 540; i++) {
+				images[i] = new Image()
+				images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
+				console.log("Loaded " + i + " of 540 images");
+			}
+			
+			var loadBar = document.getElementById("status2");
+			images[1].onload   = function(){loadBar.value = 1;};
+			images[50].onload  = function(){loadBar.value = 50;};
+			images[100].onload = function(){loadBar.value = 100;};
+			images[150].onload = function(){loadBar.value = 150;};
+			images[200].onload = function(){loadBar.value = 200;};
+			images[250].onload = function(){loadBar.value = 250;};
+			images[300].onload = function(){loadBar.value = 300;};
+			images[350].onload = function(){loadBar.value = 350;};
+			images[400].onload = function(){loadBar.value = 400;};
+			images[450].onload = function(){loadBar.value = 450;};
+			images[500].onload = function(){loadBar.value = 500;};
+			images[540].onload = function(){
+				loadBar.value = 540;
+				document.getElementById("preloader").style.display = "none";
+				document.getElementsByTagName("BODY")[0].style.overflow = "visible";
+			};
 		</script>
 	</body>
 </html>
