--- a/Tech/orig.html
+++ b/Tech/orig.html
@@ -64,6 +64,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
+				<li><a href="/Hist">History</a></li>
 				<li><a href="/Use">Uses</a></li>
 				<li class="CurrPage"><a>Technology</a></li>
 				<li><a href="/Prob">Concerns</a></li>
