FIX: Nav Bar Width

--- a/Tech/index.html
+++ b/Tech/index.html
@@ -142,10 +142,10 @@
 			
 			
 			
-			setTimeout(slowLoad, 15000);
+			/*setTimeout(slowLoad, 15000);
 			function slowLoad(){
 				document.getElementById("slowConnect").style.display = "block";
-			}
+			}*/
 			</script>
 	
 	</body>
