NEW: Index Material

--- a/indexOLD.html
+++ b/indexOLD.html
@@ -6,16 +6,12 @@
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="drones.css" />
 		
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
-		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-		
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
 	</head>
 	<body>
-		<!--<nav>
+		<nav>
 			<ul>
 				<li class="CurrPage"><a>Home</a></li>
 				<li><a href="/Hist">History</a></li>
@@ -23,25 +19,7 @@
 				<li><a href="/Tech">Technology</a></li>
 				<li><a href="/Prob">Concerns</a></li>
 			</ul>
-		</nav>-->
-		
-		
-		<!-- Simple header with fixed tabs. -->
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
-		            mdl-layout--fixed-tabs">
-		  <header class="mdl-layout__header">
-		    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-		      <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
-		      <a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>
-		      <a href="#fixed-tab-3" class="mdl-layout__tab">Tab 3</a>
-		    </div>
-		  </header>
-		</div>
-		
-		
-		
-		
-		
+		</nav>
 		
 		<div class="BGCover" id="Drone" data-0="bottom:12vh;left:40vw;" data-500="bottom:60vh;left:40vw;" data-1000="bottom:60vh;left:41vw;height:10vw;width:20vw;transform:rotateY(180deg)rotateZ(0deg)translateX(0%)translateY(0%);" data-1500="bottom:50vh;height:60vw;width:120vw;transform:rotateY(180deg)rotateZ(30deg)translateX(80%)translateY(0%);" data-2000="height:65vw;width:130vw;transform:rotateY(180deg)rotateZ(30deg)translateX(80%)translateY(0%);" data-2500="height:10vw;width:20vw;transform:rotateY(180deg)rotateZ(0deg)translateX(-60%)translateY(0%);" data-3000="transform:rotateY(180deg)rotateZ(0deg)translateX(-70%)translateY(0%);height:10vw;width:20vw;" data-3500="transform:rotateY(180deg)rotateZ(0deg)translateX(50%)translateY(400%);height:5vw;width:10vw;"></div>
 		
