--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
-		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 		<script src="/navBar.js"></script>
 		
 		
@@ -28,7 +28,7 @@
 		
 		
 		<!-- Simple header with fixed tabs. -->
-		<div id="navBar" class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+		<nav id="navBar" class="mdl-layout mdl-js-layout mdl-layout--fixed-header
 					mdl-layout--fixed-tabs">
 			<header class="mdl-layout__header" style="position:fixed;top:-64px;z-index:99999;">
 				<div class="mdl-layout__header-row"></div>
@@ -45,7 +45,7 @@
 			<main class="mdl-layout__content">
 				
 			</main>
-		</div>
+		</nav>
 		
 		
 		
@@ -114,7 +114,7 @@
 			</div>
 		</div>-->
 		
-		<div class="demo-card-wide mdl-card mdl-shadow--2dp" id="Sec5" data-3299="right:-100vw;" data-3300="right:10%;opacity:0;transform:translateY(-60%);" data-3500="opacity:1;transform:translateY(-50%);">
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp" id="Sec5" data-3299="right:-100vw;" data-3300="right:10%;opacity:0;transform:translateY(-80%);" data-3500="opacity:1;transform:translateY(-50%);">
 			<div class="mdl-card__title">
 				<h2 class="mdl-card__title-text">The End</h2>
 			</div>
@@ -161,24 +161,7 @@
 			//
 			//IMAGE PRELOADING CRAP
 			//
-			var images = new Array()
-			console.log("WARNING About to dump massive stuff to console");
-
-			for(i = 0; i <= 540; i++) {
-				images[i] = new Image()
-				images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
-				console.log("Loaded " + i + " of 540 images");
-			}
-			
-			
-			
-			function pad(num, size) {
-				if(num > 540){return 540;} // Quick Hack - CHANGE TO REFLECT NUM OF FRAMES
-				
-				var s = num+"";
-				while (s.length < size) s = "0" + s;
-				return s;
-			}
+			preloadImages();
 		</script>
 	</body>
 </html>
