NEW: Tech and Prob Pages Material

--- a/Hist/index.html
+++ b/Hist/index.html
@@ -30,10 +30,7 @@
 					<a href="/Prob" onclick="event.preventDefault();navBar(5, 2);" 	id="navLink5" class="mdl-layout__tab">Concerns</a>
 				</div>
 			</header>
-			
-			<main class="mdl-layout__content">
-				
-			</main>
+			<main class="mdl-layout__content"></main>
 		</nav>
 		
 		<!--<h1>History</h1>-->
