--- a/Tech/index.html
+++ b/Tech/index.html
@@ -5,6 +5,11 @@
 		
 		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
 		
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
+		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<script src="/navBar.js"></script>
+		
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="tech.css" />
 		
@@ -36,7 +41,7 @@
 		
 		
 		
-		<nav>
+		<!--<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/Hist">History</a></li>
@@ -44,30 +49,68 @@
 				<li class="CurrPage"><a>Technology</a></li>
 				<li><a href="/Prob">Concerns</a></li>
 			</ul>
+		</nav>-->
+		<nav id="navBar" class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+					mdl-layout--fixed-tabs">
+			<header class="mdl-layout__header" style="position:fixed;top:-64px;z-index:99999;">
+				<div class="mdl-layout__header-row"></div>
+				<!-- Tabs -->
+				<div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+					<a href="#" 	onclick="event.preventDefault();navBar(1, 4);" 	id="navLink1" class="mdl-layout__tab">Home</a>
+					<a href="/Hist" onclick="event.preventDefault();navBar(2, 4);" 	id="navLink2" class="mdl-layout__tab">History</a>
+					<a href="/Use" 	onclick="event.preventDefault();navBar(3, 4);" 	id="navLink3" class="mdl-layout__tab">Uses</a>
+					<a href="/Tech" onclick="event.preventDefault();" 				id="navLink4" class="mdl-layout__tab is-active">Technology</a>
+					<a href="/Prob" onclick="event.preventDefault();navBar(5, 4);" 	id="navLink5" class="mdl-layout__tab">Concerns</a>
+				</div>
+			</header>
+			
+			<main class="mdl-layout__content">
+				
+			</main>
 		</nav>
 		
 		<div id="Card1" class="Card" data-0="opacity:1;" data-500="opacity:0;">
 			<h1>Drone Technology</h1>
 		</div>
-		<div id="Card2" class="Card" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
+		<!--<div id="Card2" class="Card" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
 			<h2>Blades</h2>
 			<p>Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
+		</div>-->
+		<div class="mdl-card Card" id="Card2" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
+			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Blades</span></h2>
+			<p class="mdl-card__supporting-text">Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
 		</div>
-		<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
+		<!--<div id="Card3" class="Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2>Power</h2>
 			<p>Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on the drone frame to equally distribute its weight.</p>
+		</div>-->
+		<div id="Card3" class="mdl-card Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
+			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Power</span></h2>
+			<p class="mdl-card__supporting-text">Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on the drone frame to equally distribute its weight.</p>
 		</div>
-		<div id="Card4" class="Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
+		<!--<div id="Card4" class="Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
 			<h2>Communications</h2>
 			<p>Drones are able to communicate and transfer many types of signals. Drones use communication devices to talk to satellites to define their locations. Signals can also be boosted using drones. Google has plans to use drones to provide internet to millions of people who wouldn’t otherwise be able to access internet because of their remote homes.</p>
+		</div>-->
+		<div id="Card4" class="mdl-card Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
+			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Communications</span></h2>
+			<p class="mdl-card__supporting-text">Drones are able to communicate and transfer many types of signals. Drones use communication devices to talk to satellites to define their locations. Signals can also be boosted using drones. Google has plans to use drones to provide internet to millions of people who wouldn’t otherwise be able to access internet because of their remote homes.</p>
 		</div>
-		<div id="Card5" class="Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
+		<!--<div id="Card5" class="Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
 			<h2>Landing Mechanism</h2>
 			<p>This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a shock absorber when the drone lands or takes off. It is much like the suspension system in your car.</p>
+		</div>-->
+		<div id="Card5" class="mdl-card Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
+			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Landing Mechanism</span></h2>
+			<p class="mdl-card__supporting-text">This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a shock absorber when the drone lands or takes off. It is much like the suspension system in your car.</p>
 		</div>
-		<div id="Card6" class="Card" data-8100="opacity:0;" data-8400="opacity:1;">
+		<!--<div id="Card6" class="Card" data-8100="opacity:0;" data-8400="opacity:1;">
 			<h2>Onboard Computer</h2>
 			<p>This acts as the central hub for all info going through the drone. This handles what the motors do so that the drone is able to fly and react to its environment. This also handles what the communications system does. In more ways than one, it is the brain of the drone.</p>
+		</div>-->
+		<div id="Card6" class="mdl-card Card" data-8100="opacity:0;" data-8400="opacity:1;">
+			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Onboard Computer</span></h2>
+			<p class="mdl-card__supporting-text">This acts as the central hub for all info going through the drone. This handles what the motors do so that the drone is able to fly and react to its environment. This also handles what the communications system does. In more ways than one, it is the brain of the drone.</p>
 		</div>
 		
 		<div id="set-height"></div>
@@ -111,32 +154,34 @@
 			//
 			//IMAGE PRELOADING CRAP
 			//
-			var images = new Array()
-			console.log("WARNING About to dump massive stuff to console");
-
-			for(i = 0; i <= 540; i++) {
-				images[i] = new Image()
-				images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
-				console.log("Loaded " + i + " of 540 images");
-			}
-			
-			var loadBar = document.getElementById("status2");
-			images[1].onload   = function(){loadBar.value = 1;};
-			images[50].onload  = function(){loadBar.value = 50;};
-			images[100].onload = function(){loadBar.value = 100;};
-			images[150].onload = function(){loadBar.value = 150;};
-			images[200].onload = function(){loadBar.value = 200;};
-			images[250].onload = function(){loadBar.value = 250;};
-			images[300].onload = function(){loadBar.value = 300;};
-			images[350].onload = function(){loadBar.value = 350;};
-			images[400].onload = function(){loadBar.value = 400;};
-			images[450].onload = function(){loadBar.value = 450;};
-			images[500].onload = function(){loadBar.value = 500;};
-			images[540].onload = function(){
-				loadBar.value = 540;
-				document.getElementById("preloader").style.display = "none";
-				document.getElementsByTagName("BODY")[0].style.overflow = "visible";
-			};
+			setTimeout(function(){
+				var images = new Array()
+				console.log("WARNING About to dump massive stuff to console");
+	
+				for(i = 0; i <= 540; i++) {
+					images[i] = new Image()
+					images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
+					console.log("Loaded " + i + " of 540 images");
+				}
+				
+				var loadBar = document.getElementById("status2");
+				images[1].onload   = function(){loadBar.value = 1;};
+				images[50].onload  = function(){loadBar.value = 50;};
+				images[100].onload = function(){loadBar.value = 100;};
+				images[150].onload = function(){loadBar.value = 150;};
+				images[200].onload = function(){loadBar.value = 200;};
+				images[250].onload = function(){loadBar.value = 250;};
+				images[300].onload = function(){loadBar.value = 300;};
+				images[350].onload = function(){loadBar.value = 350;};
+				images[400].onload = function(){loadBar.value = 400;};
+				images[450].onload = function(){loadBar.value = 450;};
+				images[500].onload = function(){loadBar.value = 500;};
+				images[540].onload = function(){
+					loadBar.value = 540;
+					document.getElementById("preloader").style.display = "none";
+					document.getElementsByTagName("BODY")[0].style.overflow = "visible";
+				};
+			}, 2000);
 			
 			
 			
