--- a/Use/index.html
+++ b/Use/index.html
@@ -6,17 +6,27 @@
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="use.css" />
 		
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
+		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<script src="/navBar.js"></script>
+		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
-		<nav>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/Hist">History</a></li>
-				<li class="CurrPage"><a>Uses</a></li>
-				<li><a href="/Tech">Technology</a></li>
-				<li><a href="/Prob">Concerns</a></li>
-			</ul>
+		<nav id="navBar" class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
+			<header class="mdl-layout__header" style="position:fixed;top:-64px;z-index:99999;">
+				<div class="mdl-layout__header-row"></div>
+				<!-- Tabs -->
+				<div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+					<a href="#" 	onclick="event.preventDefault();navBar(1, 3);"	id="navLink1" class="mdl-layout__tab">Home</a>
+					<a href="/Hist" onclick="event.preventDefault();navBar(2, 3);"	id="navLink2" class="mdl-layout__tab">History</a>
+					<a href="/Use" 	onclick="event.preventDefault();"			 	id="navLink3" class="mdl-layout__tab is-active">Uses</a>
+					<a href="/Tech" onclick="event.preventDefault();navBar(4, 3);" 	id="navLink4" class="mdl-layout__tab">Technology</a>
+					<a href="/Prob" onclick="event.preventDefault();navBar(5, 3);" 	id="navLink5" class="mdl-layout__tab">Concerns</a>
+				</div>
+			</header>
+			<main class="mdl-layout__content"></main>
 		</nav>
 		
 		<h1>Uses of Drones</h1>
@@ -182,24 +192,9 @@
 			//
 			//IMAGE PRELOADING CRAP
 			//
-			var images = new Array()
-			console.log("WARNING About to dump massive stuff to console");
-
-			for(i = 0; i <= 540; i++) {
-				images[i] = new Image()
-				images[i].src = "/img/dronevideopics/test" + pad(i, 3) + ".png";
-				console.log("Loaded " + i + " of 540 images");
-			}
+			preloadImages();
 			
-			
-			
-			function pad(num, size) {
-				if(num > 540){return 540;} // Quick Hack - CHANGE TO REFLECT NUM OF FRAMES
-				
-				var s = num+"";
-				while (s.length < size) s = "0" + s;
-				return s;
-			}
+			alert("This page is unfinished. Don't worry - I'm working on it.");
 		</script>
 		
 	</body>
