FIX: Problem Page Fab Scroll Down

--- a/Prob/index.html
+++ b/Prob/index.html
@@ -119,7 +119,8 @@
 					} else{
 						currLoc = 0;
 					}
-				}
+				},
+				offset:100
 			});
 			var waypointnav2 = new Waypoint({
 				element: document.getElementById('Sec2'),
@@ -129,7 +130,8 @@
 					} else{
 						currLoc = 1;
 					}
-				}
+				},
+				offset:100
 			});
 			var waypointnav3 = new Waypoint({
 				element: document.getElementById('Sec3'),
@@ -139,7 +141,8 @@
 					} else{
 						currLoc = 2;
 					}
-				}
+				},
+				offset:100
 			});
 			
 			
