--- a/Tech/index.html
+++ b/Tech/index.html
@@ -7,7 +7,7 @@
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
-		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 		<script src="/navBar.js"></script>
 		
 		<link rel="stylesheet" href="/uni.css" />
