--- a/Use/index.html
+++ b/Use/index.html
@@ -8,7 +8,7 @@
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
-		<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 		<script src="/navBar.js"></script>
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
