NEW: Thicker Shadows on Cards

--- a/Hist/index.html
+++ b/Hist/index.html
@@ -34,11 +34,11 @@
 		</nav>
 		
 		<!--<h1>History</h1>-->
-		<div class="mdl-card" id="BigTitle">
+		<div class="mdl-card mdl-shadow--2dp" id="BigTitle">
 			<h1>History</h1>
 		</div>
 		
-		<section class="mdl-card">
+		<section class="mdl-card mdl-shadow--2dp">
 			<h2>Beginnings</h2>
 			<div id="UseChart" class="SideChart">
 				<h3>Common Uses</h3>
@@ -47,7 +47,7 @@
 			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying (for more details, see the <a href="/Use/">uses</a> page), it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
 		
-		<section class="mdl-card">
+		<section class="mdl-card mdl-shadow--2dp">
 			<h2>Widespread Adoption</h2>
 			<div id="GrowthChart" class="SideChart">
 				<h3>Sales Over Time</h3>
