--- a/Tech/index.html
+++ b/Tech/index.html
@@ -76,7 +76,7 @@
 			<h2>Blades</h2>
 			<p>Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
 		</div>-->
-		<div class="mdl-card Card" id="Card2" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
+		<div class="mdl-card mdl-shadow--2dp Card" id="Card2" data-1000="opacity:0;" data-1300="opacity:1;" data-2300="opacity:1;" data-2600="opacity:0;">
 			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Blades</span></h2>
 			<p class="mdl-card__supporting-text">Blades provide the drone with the power of flight. Blades can be built from a multitude of materials that include plastics, a fiber-reinforced polymer (carbon fiber), or natural wood. The plastic blades are generally used for consumer entertainment drones, the carbon fiber blades for industrial purposes, and the natural wood blades for science and technology projects such as RC planes.</p>
 		</div>
@@ -84,7 +84,7 @@
 			<h2>Power</h2>
 			<p>Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on the drone frame to equally distribute its weight.</p>
 		</div>-->
-		<div id="Card3" class="mdl-card Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
+		<div id="Card3" class="mdl-card mdl-shadow--2dp Card" data-3300="opacity:0;" data-3600="opacity:1;" data-4000="opacity:1;" data-4300="opacity:0;">
 			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Power</span></h2>
 			<p class="mdl-card__supporting-text">Drones are powered by a lithium-ion onboard battery. These batteries have to be small in order to fit on the drone. Yet, their small size doesn’t make them very light. In fact, the battery is the heaviest part of the drone, therefore it is centered on the drone frame to equally distribute its weight.</p>
 		</div>
@@ -92,7 +92,7 @@
 			<h2>Communications</h2>
 			<p>Drones are able to communicate and transfer many types of signals. Drones use communication devices to talk to satellites to define their locations. Signals can also be boosted using drones. Google has plans to use drones to provide internet to millions of people who wouldn’t otherwise be able to access internet because of their remote homes.</p>
 		</div>-->
-		<div id="Card4" class="mdl-card Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
+		<div id="Card4" class="mdl-card mdl-shadow--2dp Card" data-4300="opacity:0;" data-4600="opacity:1;" data-5200="opacity:1;" data-5500="opacity:0;">
 			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Communications</span></h2>
 			<p class="mdl-card__supporting-text">Drones are able to communicate and transfer many types of signals. Drones use communication devices to talk to satellites to define their locations. Signals can also be boosted using drones. Google has plans to use drones to provide internet to millions of people who wouldn’t otherwise be able to access internet because of their remote homes.</p>
 		</div>
@@ -100,7 +100,7 @@
 			<h2>Landing Mechanism</h2>
 			<p>This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a shock absorber when the drone lands or takes off. It is much like the suspension system in your car.</p>
 		</div>-->
-		<div id="Card5" class="mdl-card Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
+		<div id="Card5" class="mdl-card mdl-shadow--2dp Card" data-6100="opacity:0;" data-6400="opacity:1;" data-7400="opacity:1;" data-7700="opacity:0;">
 			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Landing Mechanism</span></h2>
 			<p class="mdl-card__supporting-text">This is one of the most important parts of the robot. It provides the robot with stability on the ground while acting as a shock absorber when the drone lands or takes off. It is much like the suspension system in your car.</p>
 		</div>
@@ -108,7 +108,7 @@
 			<h2>Onboard Computer</h2>
 			<p>This acts as the central hub for all info going through the drone. This handles what the motors do so that the drone is able to fly and react to its environment. This also handles what the communications system does. In more ways than one, it is the brain of the drone.</p>
 		</div>-->
-		<div id="Card6" class="mdl-card Card" data-8100="opacity:0;" data-8400="opacity:1;">
+		<div id="Card6" class="mdl-card mdl-shadow--2dp Card" data-8100="opacity:0;" data-8400="opacity:1;">
 			<h2 class="mdl-card__title"><span class="mdl-card__title-text">Onboard Computer</span></h2>
 			<p class="mdl-card__supporting-text">This acts as the central hub for all info going through the drone. This handles what the motors do so that the drone is able to fly and react to its environment. This also handles what the communications system does. In more ways than one, it is the brain of the drone.</p>
 		</div>
