--- a/Hist/index.html
+++ b/Hist/index.html
@@ -11,6 +11,9 @@
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 		<script src="/navBar.js"></script>
 		
+		<script src="/img/smooth-scroll.js"></script>
+		<script src="/img/waypoints.js"></script>
+		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.js"></script>
 		<script src="/img/waypoints.js"></script>
 		
@@ -38,7 +41,12 @@
 			<h1>History</h1>
 		</div>
 		
-		<section class="mdl-card mdl-shadow--2dp">
+		
+		<button onclick="MoveDown();" id="DownButton" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+			<i class="material-icons">&#xE313;</i>
+		</button>
+		
+		<section class="mdl-card mdl-shadow--2dp" id="Sec1">
 			<h2>Beginnings</h2>
 			<div id="UseChart" class="SideChart">
 				<h3>Common Uses</h3>
@@ -47,7 +55,7 @@
 			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying (for more details, see the <a href="/Use/">uses</a> page), it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
 		
-		<section class="mdl-card mdl-shadow--2dp">
+		<section class="mdl-card mdl-shadow--2dp" id="Sec2">
 			<h2>Widespread Adoption</h2>
 			<div id="GrowthChart" class="SideChart">
 				<h3>Sales Over Time</h3>
@@ -200,7 +208,7 @@
 			var chart1 = false;
 			var chart2 = false;
 			
-			var waypointnav0 = new Waypoint({
+			var waypoint0 = new Waypoint({
 				element: document.getElementById('GrowthChart'),
 				handler: function(direction) {
 					/*if(direction == "down"){
@@ -217,7 +225,7 @@
 				},
 				offset: '50%'
 			});
-			var waypointnav1 = new Waypoint({
+			var waypoint1 = new Waypoint({
 				element: document.getElementById('UseChart'),
 				handler: function(direction) {
 					if(!chart2){
@@ -234,6 +242,86 @@
 			
 			
 			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			/*
+			==========================================================================
+									Down Arrow Sorcery
+			==========================================================================
+			*/
+			
+			var currLoc = 0;
+		
+			smoothScroll.init(); 
+			function MoveDown(){
+				if(currLoc != 2){
+					smoothScroll.animateScroll(null, '#Sec' + (currLoc + 1), {offset: 100});
+					/*var temp = currLoc + 1;
+					switch(temp){
+						case 1:
+							smoothScroll.animateScroll(null, '#Del', {offset: 100});
+							break;
+						case 2:
+							smoothScroll.animateScroll(null, '#Film', {offset: 100});
+							break;
+						case 3:
+							smoothScroll.animateScroll(null, '#Fun', {offset: 100});
+							break;
+					}*/
+				}
+				
+			}
+			
+			//--------------------
+			//NAVIGATION WAYPOINTS
+			//--------------------
+			var waypointnav0 = new Waypoint({
+				element: document.getElementById('BigTitle'),
+				handler: function(direction) {
+					if(direction == "down"){
+						document.getElementById("DownButton").style.top = "85vh";
+						document.getElementById("DownButton").style.transform = "translateY(0%)translateX(-50%)";
+					} else{
+						document.getElementById("DownButton").removeAttribute("style");
+					}
+				}
+			});
+			var waypointnav1 = new Waypoint({
+				element: document.getElementById('Sec1'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 1;
+					} else{
+						currLoc = 0;
+					}
+				},
+				offset:100
+			});
+			var waypointnav2 = new Waypoint({
+				element: document.getElementById('Sec2'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 2;
+					} else{
+						currLoc = 1;
+					}
+				},
+				offset:100
+			});
 			
 			
 			
